# quad_controller_SE3

./: .gitignore  CMakeLists.txt  README.md  package.xml
App/: mav_fsm_node.cpp  offboard_node.cpp  realsenseRemap.cpp  rs_remap_odom_node.cpp  viconRemap.cpp
Geometric Controls of a Quadrotor UAV with Decoupled Yaw Control/: Geometric Controls of a Quadrotor UAV with Decoupled Yaw Control.md
cfg/: uav_core_param.yaml
incident_reports/: czh_12_25.md  yxq_12_26.md
include/main_controller/: SO3Control_backup.h  calculate.h  common_include.h  mav_fsm.h
include/uav_core/: imu.h  parameter.h  rc.h  uav_core.h
launch/: gazebo.launch  px4.launch  t265.launch
main_controller/App/: show_status_node.cpp  vinsfusion_remap_node.cpp
main_controller/cfg/: ControllerParams.cfg  default.rviz  default.yaml  gazebo.yaml
main_controller/include/SE3Control/: SE3Control.h  matrix_utils.h
main_controller/launch/: vicon.launch  vins.launch  vins_fusion.launch
planner/plan_env/src/: grid_map.cpp
planner/plan_manage/include/plan_manage/: ego_replan_fsm.h
planner/plan_manage/launch/: advanced_param.xml  advanced_param_real.xml  run_in_prometheus.launch  run_in_real.launch  run_in_real.rviz  rviz_real.launch
planner/plan_manage/src/: ego_planner_node.cpp  ego_replan_fsm.cpp  planner_manager.cpp
poly_traj_tuils/: README.md
poly_traj_tuils/poly_traj_utils/: CMakeLists.txt
poly_traj_tuils/poly_traj_utils/Apps/: opt_utils_test.cpp  poly_utils_test.cpp
poly_traj_tuils/poly_traj_utils/config/: obvp_test.rviz  traj_opt.yaml
poly_traj_tuils/poly_traj_utils/include/poly_traj_utils/: am_traj.hpp  am_traj_plus.hpp  bvp_solver.h  obvp_solver.hpp  poly_visual_utils.hpp  root_finder.hpp  traj_utils.hpp
poly_traj_tuils/poly_traj_utils/launch/: opt_test.launch  poly_test.launch
poly_traj_tuils/poly_traj_utils/src/: am_traj.cpp  bvp_solver.cpp  obvp_solver.cpp  poly_visual_utils.cpp
scripts/: set_origin.py
src/: mav_fsm.cpp  uav_core_node.cpp
src/SE3Control/: SE3Control.cpp  matrix_utils.cpp
